# utils

./: CMakeLists.txt  LICENSE  README.md  vcpkg.json
include/nkgt/: noisy.hpp  type_support.hpp
include/nkgt/traits/: vectors.hpp
src/: noisy.cpp
test/: CMakeLists.txt  test_main.cpp  type_support.test.hpp
test/traits/: vectors.test.hpp
